// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceTag should not break when an incorrect price is provided 1`] = `
.c0 {
  position: relative;
}

.c0 sup {
  font-size: .7em;
}

<PriceTag
  currency="EUR"
  locale="de-DE"
  value="🐛"
>
  <styled.span>
    <span
      className="c0"
    >
       
    </span>
  </styled.span>
</PriceTag>
`;

exports[`PriceTag should render a label with the price is 0 1`] = `
.c0 {
  position: relative;
}

.c0 sup {
  font-size: .7em;
}

<PriceTag
  currency="EUR"
  freeLabel="free"
  locale="nl-NL"
  value="0"
>
  <styled.span>
    <span
      className="c0"
    >
      free
    </span>
  </styled.span>
</PriceTag>
`;

exports[`PriceTag should render an action price 1`] = `
.c0 {
  position: relative;
}

.c0 sup {
  font-size: .7em;
}

.c0::after {
  content: '';
  width: 100%;
  height: 2px;
  left: 0;
  top: 50%;
  margin-top: -2px;
  position: absolute;
  background: #88979d;
  opacity: .7;
  -webkit-transform: rotate(-8deg);
  -ms-transform: rotate(-8deg);
  transform: rotate(-8deg);
}

<PriceTag
  currency="EUR"
  locale="nl-NL"
  strikethrough={true}
  value="10,20"
>
  <styled.span
    strikethrough={true}
  >
    <span
      className="c0"
    >
       
    </span>
  </styled.span>
</PriceTag>
`;

exports[`PriceTag should render with a dashed fraction 1`] = `
.c0 {
  position: relative;
}

.c0 sup {
  font-size: .7em;
}

<PriceTag
  currency="EUR"
  fractionFormat="dash"
  locale="nl-NL"
  value="10.00"
>
  <styled.span>
    <span
      className="c0"
    >
       
      -
    </span>
  </styled.span>
</PriceTag>
`;

exports[`PriceTag should render with a fraction in superscript 1`] = `
.c0 {
  position: relative;
}

.c0 sup {
  font-size: .7em;
}

<PriceTag
  currency="EUR"
  locale="nl-NL"
  superScriptFraction={true}
  value="10,20"
>
  <styled.span>
    <span
      className="c0"
    >
       
      <sup
        key="fraction"
      />
    </span>
  </styled.span>
</PriceTag>
`;

exports[`PriceTag should render with a hidden currency and superscript franction 1`] = `
.c0 {
  position: relative;
}

.c0 sup {
  font-size: .7em;
}

<PriceTag
  currency="EUR"
  hideCurrency={true}
  locale="nl-NL"
  superScriptFraction={true}
  value="10,20"
>
  <styled.span>
    <span
      className="c0"
    >
      <sup
        key="fraction"
      />
    </span>
  </styled.span>
</PriceTag>
`;

exports[`PriceTag should render with a hidden fraction on a round value 1`] = `
.c0 {
  position: relative;
}

.c0 sup {
  font-size: .7em;
}

<PriceTag
  currency="EUR"
  fractionFormat="none"
  locale="nl-NL"
  value="10.00"
>
  <styled.span>
    <span
      className="c0"
    >
       
    </span>
  </styled.span>
</PriceTag>
`;

exports[`PriceTag should render with showDash and superscript on a round value 1`] = `
.c0 {
  position: relative;
}

.c0 sup {
  font-size: .7em;
}

<PriceTag
  currency="EUR"
  fractionFormat="dash"
  locale="nl-NL"
  superScriptFraction={true}
  value="0,00"
>
  <styled.span>
    <span
      className="c0"
    >
       
      -
    </span>
  </styled.span>
</PriceTag>
`;
